# comp_arch

./: .gitignore  README.md  pyproject.toml
comp_arch/models/: Cpu.py
